--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
 		"lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
 		"format": "prettier --write \"./**/*.{html,vue,ts,js,json,md}\"",
 		"commit:comment": "引导设置规范化的提交信息",
-    	"commit":"git-cz"
+		"commit": "git-cz",
+		"prepare": "husky"
 	},
 	"config": {
 		"commitizen": {
-		  	"path": "node_modules/cz-customizable"
+			"path": "node_modules/cz-customizable"
 		},
-		"cz-customizable":{
-			"config":"./.cz-config.cjs"
+		"cz-customizable": {
+			"config": "./.cz-config.cjs"
 		}
+	},
+	"lint-staged": {
+		"*.{js,ts}": [
+			"npm run lint",
+			"npm run format"
+		]
 	},
 	"dependencies": {
 		"axios": "^1.6.4",
@@ -47,6 +54,8 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.1",
 		"eslint-plugin-vue": "^9.19.2",
+		"husky": "^9.0.11",
+		"lint-staged": "^15.2.4",
 		"prettier": "^3.1.1",
 		"sass": "^1.69.5",
 		"typescript": "^5.2.2",
