--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"axios": "^1.6.4",
 		"element-plus": "^2.4.4",
 		"mitt": "^3.0.1",
+		"mockjs": "^1.1.0",
 		"nprogress": "^0.2.0",
 		"pinia": "^2.1.7",
 		"pinia-plugin-persistedstate": "^3.2.1",
@@ -64,6 +65,7 @@
 		"unplugin-auto-import": "^0.17.2",
 		"unplugin-vue-components": "^0.26.0",
 		"vite": "^5.0.8",
+		"vite-plugin-mock": "^3.0.2",
 		"vite-plugin-svg-icons": "^2.0.1",
 		"vue-tsc": "^1.8.25"
 	}
