chore: 更新项目结构

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
 		"src/**/*.d.ts",
 		"typings/**/*.d.ts",
 		"typings/**/*.ts",
-		"mock/**/*.ts",
+		"mock/**/*.ts"
 	],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
