--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+typins/auto-imports.d.ts
+typings/components.d.ts
+
 node_modules
 dist
 dist-ssr
