--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^19.3.0",
 		"@commitlint/config-conventional": "^19.2.2",
+		"@types/mockjs": "^1.0.10",
 		"@types/node": "^20.10.5",
 		"@types/nprogress": "^0.2.3",
 		"@typescript-eslint/eslint-plugin": "^6.15.0",
@@ -65,7 +66,6 @@
 		"unplugin-auto-import": "^0.17.2",
 		"unplugin-vue-components": "^0.26.0",
 		"vite": "^5.0.8",
-		"vite-plugin-mock": "^3.0.2",
 		"vite-plugin-svg-icons": "^2.0.1",
 		"vue-tsc": "^1.8.25"
 	}
