--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	},
 	"dependencies": {
 		"axios": "^1.6.4",
+		"echarts": "^5.5.1",
 		"element-plus": "^2.4.4",
 		"mitt": "^3.0.1",
 		"mockjs": "^1.1.0",
