chore: env config update

--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
 # 应用名称
-VITE_NAME = "BETTER-VUE3-ADMIN"
+VITE_NAME = "better-vue3-admin"
 
 # 网络超时请求时间
 VITE_TIMEOUT = 30000
-
-# 是否启用 mock
-MOCK = 1
