--- a/package.json
+++ b/package.json
@@ -77,11 +77,13 @@
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.4",
 		"prettier": "^3.1.1",
+		"rollup-plugin-visualizer": "^5.12.0",
 		"sass": "^1.69.5",
 		"typescript": "^5.2.2",
 		"unplugin-auto-import": "^0.17.2",
 		"unplugin-vue-components": "^0.26.0",
 		"vite": "^5.0.8",
+		"vite-plugin-compression": "^0.5.1",
 		"vite-plugin-svg-icons": "^2.0.1",
 		"vue-tsc": "^1.8.25"
 	}
